feat: update swaggerUI && add toggleFav endpoint
