# src/routes/userRoutes.js
@@ -1,9 +1,10 @@
 import express from "express";
-import { getProfile } from "../controllers/userController.js";
+import { getProfile, getFavoriteScans } from "../controllers/userController.js";
 import { authenticateJwt } from "../middlewares/authMiddleware.js";
 
 const router = express.Router();
 
 router.get("/me", authenticateJwt, getProfile);
+router.get("/favorites", authenticateJwt, getFavoriteScans);
 
 export default router;
